--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
     "autoprefixer": "10.4.19",
+    "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -60,6 +61,7 @@
     "react-dom": "18.3.1",
     "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
+    "react-loading-skeleton": "^3.4.0",
     "react-resizable-panels": "^2.0.20",
     "recharts": "^2.12.7",
     "sonner": "^1.5.0",
@@ -69,5 +71,9 @@
     "typescript": "5.5.3",
     "vaul": "^0.9.1",
     "zod": "^3.23.8"
+  },
+  "devDependencies": {
+    "@types/react-transition-group": "^4.4.10",
+    "react-transition-group": "^4.4.5"
   }
 }
