--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
+    "@reduxjs/toolkit": "^2.2.7",
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "20.14.11",
@@ -60,6 +61,7 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.408.0",
     "next": "14.2.5",
+    "next-redux-wrapper": "^8.1.0",
     "next-themes": "^0.3.0",
     "nodemailer": "^6.9.14",
     "postcss": "8.4.39",
@@ -69,8 +71,11 @@
     "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
     "react-loading-skeleton": "^3.4.0",
+    "react-redux": "^9.1.2",
     "react-resizable-panels": "^2.0.20",
     "recharts": "^2.12.7",
+    "redux": "^5.0.1",
+    "redux-persist": "^6.0.0",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss": "3.4.6",
