--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "pages:build":"npx @cloudflare/next-on-pages"
+    "lint": "next lint"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
@@ -52,12 +51,14 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "crypto": "^1.0.1",
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "embla-carousel-autoplay": "^8.1.6",
     "embla-carousel-react": "^8.1.6",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.5",
+    "fs": "^0.0.1-security",
     "input-otp": "^1.2.4",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.408.0",
@@ -65,6 +66,7 @@
     "next-redux-wrapper": "^8.1.0",
     "next-themes": "^0.3.0",
     "nodemailer": "^6.9.14",
+    "path": "^0.12.7",
     "postcss": "8.4.39",
     "react": "18.3.1",
     "react-day-picker": "^8.10.1",
@@ -78,6 +80,7 @@
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
     "sonner": "^1.5.0",
+    "stream": "^0.0.3",
     "tailwind-merge": "^2.4.0",
     "tailwindcss": "3.4.6",
     "tailwindcss-animate": "^1.0.7",
