--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "eslint-config-next": "14.2.5",
     "fs": "^0.0.1-security",
     "input-otp": "^1.2.4",
+    "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.408.0",
     "next": "14.2.5",
@@ -90,6 +91,7 @@
   },
   "devDependencies": {
     "@cloudflare/next-on-pages": "^1.13.1",
+    "@types/js-cookie": "^3.0.6",
     "@types/nodemailer": "^6.4.15",
     "@types/react-transition-group": "^4.4.10",
     "prisma": "^5.17.0",
